<resources>
    <string name="app_name">MovieNearYou</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>

    <string name="now_playing_http">now_playing</string>
    <string name="popular_http">popular</string>
    <string name="top_rated_http">top_rated</string>
    <string name="upcoming_http">upcoming</string>

    <string name="my_collection">My Collection</string>
    <string name="news">Latest Movie News</string>
    <string name="poster_base_url">https://image.tmdb.org/t/p/w300</string>

    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="videos">Videos</string>
    <string name="showtime">Showtime</string>
    <string name="viewAll">View All</string>
    <string name="cast">Cast</string>
    <string name="reviews">Reviews</string>
    <string name="similar">You may also like</string>
    <string name="channels">Purchase available on</string>
    <string name="chooser">Please choose an app</string>
    <string name="imdb">IMDB link</string>
    <string name="search_hint">Search movie</string>
    <string name="login">Signin</string>

    <string name="facebook_app_id">1232215280122670</string>
    <string name="signon">Sign in</string>
    <string name="logout">Sign out</string>
    <string name="emailLoginText">Or login with email</string>
    <string name="loginRedirect">Take me to login</string>
    <string name="cancel">Cancel</string>
    <string name="mycollection">My collection</string>
    <string name="latest_news">Latest news</string>
    <string name="noCollection">Seems like you haven\'t build your collection yet</string>
    <string name="ticketHint">Below are air times we found for this movie, click to redirect to ticket website.</string>
    <string name="cinemaHint">Click to view showtime of the cinema.</string>
    <string name="tickets">Tickets</string>
    <string name="googleTicket">https://www.google.com</string>
    <string name="location_error">Can not retrieve last known location</string>
</resources>
