<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item android:title="movies">
            <menu>
                <item
                    android:id="@+id/now_playing"
                    android:icon="@drawable/now_playing"
                    android:title="@string/now_playing" />
                <item
                    android:id="@+id/popular"
                    android:icon="@drawable/popular"
                    android:title="@string/popular" />
                <item
                    android:id="@+id/top_rated"
                    android:icon="@drawable/top_rated"
                    android:title="@string/top_rated" />
                <item
                    android:id="@+id/upcoming"
                    android:icon="@drawable/upcoming"
                    android:title="@string/upcoming" />
            </menu>
        </item>
    </group>

    <item android:title="collection">
        <menu>
            <item
                android:id="@+id/collection"
                android:icon="@drawable/collection"
                android:title="@string/my_collection" />
        </menu>
    </item>

</menu>
